[project]
name = "sdh"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.132.0",
    "pydantic-settings>=2.13.1",
]

[dependency-groups]
dev = [
    "ruff>=0.15.2",
]

[tool.ruff]
line-length = 120
target-version = "py314"

[tool.ruff.lint]
select = [
    "B",        # bugbear
    "C4",       # flake8-comprehensions
    "E",        # pycodestyle
    "F",        # Pyflakes
    "I",        # isort
    "PL",       # pylint
    "RUF",      # ruff-specific
    "TID",      # flake8-tidy-imports
    "UP",       # pyupgrade
    "W",        # pycodestyle warnings
]
ignore = [
    "E501",
]

[tool.ruff.format]
quote-style = "double"
skip-magic-trailing-comma = false
