[project]
name = "sdh"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.132.0",
    "httpx>=0.28.1",
    "psutil>=7.2.2",
    "pydantic-settings>=2.13.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "sqlalchemy>=2.0.47",
]

[dependency-groups]
dev = [
    "ruff>=0.15.2",
]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
asyncio_mode = "auto"
# Resolve import issues for tests by adding the project root to pythonpath
pythonpath = ["."]

[tool.ruff]
line-length = 120
target-version = "py314"

[tool.ruff.lint]
select = [
    "B",        # bugbear
    "C4",       # flake8-comprehensions
    "E",        # pycodestyle
    "F",        # Pyflakes
    "I",        # isort
    "PL",       # pylint
    "RUF",      # ruff-specific
    "TID",      # flake8-tidy-imports
    "UP",       # pyupgrade
    "W",        # pycodestyle warnings
]
ignore = [
    "E501",
]

[tool.ruff.format]
quote-style = "double"
skip-magic-trailing-comma = false
